//
// This Protobuf definition was generated by Visual ReCode 2.0.3.1140
//
syntax = "proto3";

option csharp_namespace = "Viking.AnnotationServiceTypes.gRPC.V1.Protos";

package Viking.AnnotationServiceTypes.gRPC.V1;

import "Protos/AnnotationTypes.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service AnnotateStructures {
  rpc CreateStructure (CreateStructureRequest) returns (CreateStructureResponse);
  rpc GetStructures (GetStructuresRequest) returns (GetStructuresResponse);
  rpc GetStructuresForSection (GetStructuresForSectionRequest) returns (GetStructuresForSectionResponse);
  rpc GetStructuresInMosaicRegion (GetStructuresInMosaicRegionRequest) returns (GetStructuresInMosaicRegionResponse);
  rpc GetStructuresInVolumeRegion (GetStructuresInVolumeRegionRequest) returns (GetStructuresInVolumeRegionResponse);
  rpc GetStructureByID (GetStructureByIDRequest) returns (GetStructureByIDResponse);
  rpc GetStructuresByID (GetStructuresByIDRequest) returns (GetStructuresByIDResponse);
  rpc CreateStructureLink (CreateStructureLinkRequest) returns (CreateStructureLinkResponse); 
  rpc GetLinkedStructures (GetLinkedStructuresRequest) returns (GetLinkedStructuresResponse);
  rpc GetNetworkedStructures (GetNetworkedStructuresRequest) returns (GetNetworkedStructuresResponse); 
  rpc GetChildStructuresInNetwork (GetChildStructuresInNetworkRequest) returns (GetChildStructuresInNetworkResponse);
  rpc GetStructureLinksInNetwork (GetStructureLinksInNetworkRequest) returns (GetStructureLinksInNetworkResponse); 
  rpc NumberOfLocations (NumberOfLocationsRequest) returns (NumberOfLocationsResponse);
  rpc Update (UpdateStructuresRequest) returns (UpdateStructuresResponse);
  rpc UpdateLinks (UpdateStructureLinksRequest) returns (UpdateStructureLinksResponse);
  rpc GetUnfinishedLocations (GetUnfinishedLocationsRequest) returns (GetUnfinishedLocationsResponse); 
  rpc GetUnfinishedLocationsWithPosition (GetUnfinishedLocationsWithPositionRequest) returns (GetUnfinishedLocationsWithPositionResponse);
  rpc GetStructuresOfType (GetStructuresOfTypeRequest) returns (GetStructuresOfTypeResponse);
  rpc Merge (MergeRequest) returns (MergeResponse);
  rpc Split (SplitRequest) returns (SplitResponse);
  rpc SplitAtLocationLink (SplitAtLocationLinkRequest) returns (SplitAtLocationLinkResponse); 
  rpc GetStructureChangeLog (GetStructureChangeLogRequest) returns (GetStructureChangeLogResponse);
  rpc GetChildStructures (GetChildStructuresRequest) returns (GetChildStructuresResponse);
}
 
message StructureChangeRequest {
	oneof action {
		Structure create = 1;
		Structure update = 2;
		int64 delete = 3;
	}
}

message StructureChangeResponse {
	bool success = 1;     //True if the change was applied
	oneof Action {
		Structure created = 2;
		Structure updated = 3;
		int64 deletedId = 4;
	}
}

message CreateStructureRequest {
  Structure new_structure = 1;
  Location new_annotation = 2;
}


message CreateStructureResponse {
  Structure new_structure = 1;
  Location new_annotation = 2;
}


message GetStructuresRequest {
}


message GetStructuresResponse {
  repeated Structure results = 1;
}


message GetStructuresForSectionRequest {
	int64 z = 1; 
	optional google.protobuf.Timestamp modified_after_this_utc_time = 2;	
}

message GetStructuresForSectionResponse {
  repeated Structure results = 1;
  repeated int64 deleted_ids = 2; 
  google.protobuf.Timestamp query_executed_time = 3;
}


message GetStructuresInMosaicRegionRequest {
	int64 z = 1; 
	optional google.protobuf.Timestamp modified_after_this_utc_time = 2;	
	Geometry region = 3;
	double min_radius = 4;
	
}

message GetStructuresInMosaicRegionResponse {
  repeated Structure results = 1;
  repeated int64 deleted_ids = 2; 
  google.protobuf.Timestamp query_executed_time = 3;
}


message GetStructuresInVolumeRegionRequest {
	int64 z = 1; 
	optional google.protobuf.Timestamp modified_after_this_utc_time = 2;	
	Geometry region = 3;
	double min_radius = 4;
}

message GetStructuresInVolumeRegionResponse {
  repeated Structure results = 1;
  repeated int64 deleted_ids = 2; 
  google.protobuf.Timestamp query_executed_time = 3;
}
 
message GetStructureByIDRequest {

  int64 id = 1;
}

message GetStructureByIDResponse {

  Structure result = 1;
}
 
message GetStructuresByIDRequest {

  repeated int64 ids = 1;
}

message GetStructuresByIDResponse {

  repeated Structure results = 1;
}
 
message CreateStructureLinkRequest {

  StructureLink new_link = 1;
}
 
message CreateStructureLinkResponse {
	StructureLink result = 1;
}
  
message GetLinkedStructuresRequest {

  int64 id = 1;
}
 
message GetLinkedStructuresResponse {

  repeated StructureLink results = 1;
}

message GetLinkedStructuresByIDRequest {

  int64 id = 1;
}
 
message GetLinkedStructuresByIDResponse {

  repeated StructureLink results = 1;
}
 
message GetNetworkedStructuresRequest {

  repeated int64 ids = 1;
  int32 num_hops = 2;
}
 
message GetNetworkedStructuresResponse {

  repeated int64 results = 1;
}

message GetChildStructuresInNetworkRequest {

  repeated int64 ids = 1;
  int32 num_hops = 2;
}
 
message GetChildStructuresInNetworkResponse {

  repeated Structure results = 1;
}

message GetStructureLinksInNetworkRequest {

  repeated int64 ids = 1;
  int32 num_hops = 2;
}
 
message GetStructureLinksInNetworkResponse {

  repeated StructureLink results = 1;
}


message NumberOfLocationsRequest {

  int64 id = 1;
}
 
message NumberOfLocationsResponse {

  int64 result = 1;
} 

message UpdateStructuresRequest {
  repeated StructureChangeRequest objs = 1;
}

message UpdateStructuresResponse {

  repeated StructureChangeResponse results = 1;
}

message UpdateStructureLinksRequest {

  repeated StructureLink objs = 1;
}

message UpdateStructureLinksResponse {
 
}

message GetUnfinishedLocationsRequest {
  int64 id = 1;
}

message GetUnfinishedLocationsResponse {
  repeated int64 results = 1;
}


message GetUnfinishedLocationsWithPositionRequest {
  int64 id = 1;
}

message GetUnfinishedLocationsWithPositionResponse {
  repeated int64 results = 1;
}


message GetStructuresOfTypeRequest {
  int64 id = 1;
}

message GetStructuresOfTypeResponse {
  repeated Structure results = 1;
}

message MergeRequest {
  int64 keep_id = 1;
  int64 merge_id = 2;
}

message MergeResponse {
  int64 kept_id = 1; 
}

message SplitRequest {
  int64 id = 1;
  int64 first_location_id_of_split_structure = 2;
}

message SplitResponse {
  int64 split_structure_id = 1; 
}

message SplitAtLocationLinkRequest {
  int64 location_id_of_keep_structure = 1;
  int64 location_id_of_split_structure = 2;
}

message SplitAtLocationLinkResponse {
  int64 split_structure_id = 1;
}

message GetStructureChangeLogRequest {
  optional int64 structure_id = 1;
  optional google.protobuf.Timestamp begin_time = 2;
  optional google.protobuf.Timestamp end_time = 3;
}

message GetStructureChangeLogResponse {
  repeated Structure results = 1;
}

message GetChildStructuresRequest {
  int64 structure_id = 1;
}

message GetChildStructuresResponse {
	repeated Structure results = 1;
}

