//
// This Protobuf definition was generated by Visual ReCode 2.0.3.1140
//
syntax = "proto3";

option csharp_namespace = "Viking.gRPC.AnnotationTypes.V1.Protos";

package Viking.gRPC.AnnotationTypes.V1;

import "Protos/AnnotationTypes.proto";
import "google/protobuf/timestamp.proto";

service AnnotateStructureTypes{
  rpc CreateStructureType (CreateStructureTypeRequest) returns (CreateStructureTypeResponse);
  rpc GetStructureTypes (GetStructureTypesRequest) returns (GetStructureTypesResponse);
  rpc GetStructureTypeByID (GetStructureTypeByIDRequest) returns (GetStructureTypeByIDResponse);
  rpc GetStructureTypesByIDs (GetStructureTypesByIDsRequest) returns (GetStructureTypesByIDsResponse);
  rpc UpdateStructureTypes (UpdateStructureTypesRequest) returns (UpdateStructureTypesResponse); 
}

message CreateStructureTypeRequest {

  StructureType obj = 1;
}

message CreateStructureTypeResponse {
  StructureType result = 1;
}


message GetStructureTypesRequest { 
}


message GetStructureTypesResponse { 
	repeated StructureType results = 1;
}


message GetStructureTypeByIDRequest { 
	int64 id = 1;
}


message GetStructureTypeByIDResponse { 
	StructureType result = 1;
}


message GetStructureTypesByIDsRequest { 
	repeated int64 id = 1;
}


message GetStructureTypesByIDsResponse { 
	repeated StructureType results = 1;
}

message UpdateStructureTypesRequest { 
	repeated StructureType objs = 1;
}
 
message UpdateStructureTypesResponse { 
	repeated int64 results = 1;
}
 